<resources>
    <string name="app_name">Alternova</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="sign_in_text_button">Iniciar Sesión</string>
    <string name="sign_in_question_text">¿No tienes una cuenta?</string>
    <string name="sign_up_question_text">¿Ya tienes una cuenta?</string>
    <string name="sign_up_text_button">Registrate</string>
    <string name="welcome_to_lego_store">¡Bienvenido a Lego Store!</string>
    <string name="email_login_text">Correo</string>
    <string name="password_login_text">Contraseña</string>
    <string name="register">Registrarse</string>


</resources>