<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:src="@drawable/ic_logo_lego"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text_button"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mtv_question"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_question_text"
        android:padding="8dp"
        android:layout_marginBottom="45dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/sign_up_text_button"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBaseline_toBaselineOf="@+id/mtv_question"
        app:layout_constraintStart_toEndOf="@id/mtv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/mtv_question"/>



</androidx.constraintlayout.widget.ConstraintLayout>