<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".ui.login.signUp.SignUpFragment">

<ImageView
    android:id="@+id/iv_backGround_lego"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_lego"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:importantForAccessibility="no"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <ImageView
        android:id="@+id/iv_logo_lego"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_lego_colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_form_login"
        android:importantForAccessibility="no"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        android:background="?attr/colorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_title_card_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_lego_store"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_login_text"
                android:layout_marginTop="32dp"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                app:layout_constraintStart_toStartOf="@id/mtv_title_card_login"
                app:layout_constraintTop_toBottomOf="@id/mtv_title_card_login"
                app:layout_constraintEnd_toEndOf="@id/mtv_title_card_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_login_text"
                android:layout_marginTop="16dp"
                app:endIconMode="password_toggle"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
                app:layout_constraintStart_toStartOf="@id/til_email"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintEnd_toEndOf="@id/til_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@id/til_password"
                app:layout_constraintStart_toStartOf="@id/til_password"
                app:layout_constraintTop_toBottomOf="@id/til_password" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_question_text"
                android:padding="8dp"
                android:layout_marginVertical="32dp"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
                app:layout_constraintEnd_toStartOf="@id/signIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sign_in_text_button"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintBaseline_toBaselineOf="@+id/mtv_question"
                app:layout_constraintStart_toEndOf="@id/mtv_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/mtv_question"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_mode_night"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:importantForAccessibility="no"/>

</androidx.constraintlayout.widget.ConstraintLayout>